# T-SPLINE

python/: CMakeLists.txt
source/: splbase.cpp
